--- a/image_viewer/pubspec.yaml
+++ b/image_viewer/pubspec.yaml
@@ -28,6 +28,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  http: 1.1.0
+  cached_network_image: 3.2.3
   flutter:
     sdk: flutter
 
